Now based on alpine.

--- a/mc/Dockerfile
+++ b/mc/Dockerfile
@@ -1,8 +1,10 @@
-FROM scratch
+FROM thenatureofsoftware/alpine-arm64:latest
 
 COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
-COPY mc /mc
+COPY mc /app/mc
+
+WORKDIR /app
 
 VOLUME ["/export"]
 
-ENTRYPOINT ["/mc"]
+ENTRYPOINT ["/app/mc"]
