Moved mc to /usr/local/bin

--- a/mc/Dockerfile
+++ b/mc/Dockerfile
@@ -1,10 +1,8 @@
 FROM thenatureofsoftware/alpine-arm64:latest
 
 COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
-COPY mc /app/mc
-
-WORKDIR /app
+COPY mc /usr/local/bin/mc
 
 VOLUME ["/export"]
 
-ENTRYPOINT ["/app/mc"]
+ENTRYPOINT ["mc"]
