--- a/Dockerfile.minio
+++ b/Dockerfile.minio
@@ -1,8 +1,13 @@
 FROM scratch
 
+MAINTAINER https://github.com/larmog
+
 COPY minio /minio
+COPY config-minio.json /app/config/config.json
 
 VOLUME ["/export"]
 
 EXPOSE 9000
-ENTRYPOINT ["/minio"]
+ENTRYPOINT ["/minio", "-C", "/app/config"]
+
+CMD ["version"]
