--- a/config-mc.json
+++ b/config-mc.json
@@ -2,7 +2,7 @@
 	"version": "8",
 	"hosts": {
 	  "minio": {
-		  "url": "http://minio-0:9000",
+		  "url": "http://minio:9000",
 		  "accessKey": "9CLXA58B6YTGPXTZBGCV",
 		  "secretKey": "wWJsxe7DPGLPxQkHgeCz7ObDxG89wzhYGRUA5o51",
 		  "api": "S3v4"
