--- a/Dockerfile.mc-arm
+++ b/Dockerfile.mc-arm
@@ -2,8 +2,8 @@ FROM scratch
 
 MAINTAINER https://github.com/larmog
 
-COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
-COPY mc /mc
+COPY .work/qemu-arm-static /usr/bin/qemu-arm-static
+COPY .work/mc-arm /mc
 
 COPY config-mc.json /app/config/config.json
 
