--- a/mysql-example.yml
+++ b/mysql-example.yml
@@ -27,9 +27,18 @@ spec:
         app: mysql
       annotations:
         pod.beta.kubernetes.io/init-containers: '[{
-          "name": "volume-setup",
-          "image": "thenatureofsoftware/mc-arm64",
+          "name": "setup",
+          "image": "thenatureofsoftware/mc",
           "args": ["mirror", "minio/store0", "/var/lib/mysql"],
+          "volumeMounts": [{
+            "mountPath": "/var/lib/mysql",
+            "name": "persistentdata"
+          }]
+        },
+        {
+          "name": "chown",
+          "image": "tobi312/rpi-mysql:5.6",
+          "command": ["chown", "-R", "mysql:mysql", "/var/lib/mysql"],
           "volumeMounts": [{
             "mountPath": "/var/lib/mysql",
             "name": "persistentdata"
@@ -52,7 +61,7 @@ spec:
         - containerPort: 3306
           protocol: TCP
         resources: {}
-      - image: thenatureofsoftware/mc-mirror-arm64:latest
+      - image: thenatureofsoftware/mc-mirror:latest
         imagePullPolicy: Always
         name: mc-mirror
         args:
