--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 # push image
 - >
   if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push manifest-minio.yml
-    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push manifest-mc.yml
-    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push manifest-mc-mirror.yml
+    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-minio.yml
+    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-mc.yml
+    .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-mc-mirror.yml
   fi
