--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ script:
 # push image
 - >
   if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    docker push thenatureofsoftware/minio-arm:latest
+    docker push thenatureofsoftware/minio-arm64:latest
+    docker push thenatureofsoftware/mc-arm:latest
+    docker push thenatureofsoftware/mc-arm64:latest
+    docker push thenatureofsoftware/mc-mirror-arm:latest
+    docker push thenatureofsoftware/mc-mirror-arm64:latest
     .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-minio.yml
     .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-mc.yml
     .work/manifest-tool --username "$DOCKER_USER" --password "$DOCKER_PASS" push from-spec manifest-mc-mirror.yml
