--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 # push image
 - >
   if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
     docker push thenatureofsoftware/minio-arm:latest
     docker push thenatureofsoftware/minio-arm64:latest
     docker push thenatureofsoftware/mc-arm:latest
