--- a/Dockerfile.volumizr-arm64
+++ b/Dockerfile.volumizr-arm64
@@ -5,16 +5,19 @@ MAINTAINER https://github.com/larmog
 ENV HOME=/app
 
 COPY .work/mc-arm64 /usr/local/bin/mc
-COPY mc-mirror /app/mc-mirror
+COPY volumizr.sh /app/volumizr
 COPY .work/qemu-aarch64-static /usr/bin/qemu-aarch64-static
 COPY config-mc.json /app/config/config.json
 
-RUN mkdir /app/source && mkdir /app/target
+RUN apk add --update bash \
+  && rm -rf /var/cache/apk/* \
+  && mkdir /app/source \
+  && mkdir /app/target
 
 VOLUME /source
 VOLUME /target
 VOLUME /app/config
 
-ENTRYPOINT ["/app/mc-mirror"]
+ENTRYPOINT ["/app/volumizr"]
 
-CMD ["/app/source", "/app/target"]
+CMD ["in", "/app/source", "/app/target"]
