--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
     docker push thenatureofsoftware/mc-arm64:latest
     docker push thenatureofsoftware/volumizr-arm:latest
     docker push thenatureofsoftware/volumizr-arm64:latest
+    docker push thenatureofsoftware/volumizr-amd64:latest
     .work/manifest-tool push from-spec manifest-minio.yml
     .work/manifest-tool push from-spec manifest-mc.yml
     .work/manifest-tool push from-spec manifest-volumizr.yml
