--- a/Dockerfile.mc-arm64
+++ b/Dockerfile.mc-arm64
@@ -1,12 +1,11 @@
-FROM scratch
+FROM multiarch/alpine:aarch64-v3.5
 
 MAINTAINER https://github.com/larmog
 
-COPY .work/qemu-aarch64-static /usr/bin/qemu-aarch64-static
-COPY .work/mc-arm64 /mc
+COPY .work/mc-arm64 /usr/bin/mc
 
 COPY config-mc.json /app/config/config.json
 
 VOLUME /app/config
 
-ENTRYPOINT ["/mc", "--quiet", "-C", "/app/config"]
+ENTRYPOINT ["mc", "--quiet", "-C", "/app/config"]
