--- a/Dockerfile.minio-arm64
+++ b/Dockerfile.minio-arm64
@@ -1,14 +1,13 @@
-FROM scratch
+FROM multiarch/alpine:aarch64-v3.5
 
 MAINTAINER https://github.com/larmog
 
-COPY .work/qemu-aarch64-static /usr/bin/qemu-aarch64-static
-COPY .work/minio-arm64 /minio
+COPY .work/minio-arm64 /usr/bin/minio
 COPY config-minio.json /app/config/config.json
 
 VOLUME ["/export"]
 
 EXPOSE 9000
-ENTRYPOINT ["/minio", "-C", "/app/config"]
+ENTRYPOINT ["minio", "-C", "/app/config"]
 
 CMD ["version"]
