--- a/Dockerfile.volumizr-arm
+++ b/Dockerfile.volumizr-arm
@@ -1,12 +1,11 @@
-FROM hypriot/rpi-alpine
+FROM multiarch/alpine:armhf-v3.5
 
 MAINTAINER https://github.com/larmog
 
 ENV HOME=/app
 
-COPY .work/mc-arm /usr/local/bin/mc
+COPY .work/mc-arm /usr/bin/mc
 COPY volumizr.sh /app/volumizr
-COPY .work/qemu-arm-static /usr/bin/qemu-arm-static
 COPY config-mc.json /app/config/config.json
 
 RUN apk --no-cache add bash \
